--- a/.github/workflows/solo.yml
+++ b/.github/workflows/solo.yml
@@ -21,9 +21,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-    
-
-      - name: Deploy application
+      - name: Prepare deployment script
         run: |
-          # Add deployment commands here
-          # Example: rsync -avz ./dist user@server:/path/to/destination
+          echo '#!/bin/bash' >> deploy.sh
+          echo '# Add your deployment commands here' >> deploy.sh
+          echo '# Example: rsync -avz ./dist user@server:/path/to/destination' >> deploy.sh
+          chmod +x deploy.sh
+
+      - name: Connect to EC2 instance and deploy application
+        run: |
+          ssh -i ../../solomon.pem solohitech@ec2-paris2IP-44.201.192.126 'bash -s' < deploy.sh
