--- a/.github/workflows/solo.yml
+++ b/.github/workflows/solo.yml
@@ -26,13 +26,13 @@ jobs:
         with:
           host: 44.201.192.126
           username: solohitech
-          password: ${{ secrets.SSH_PASSWORD }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            # Copy the code to the remote server
-            scp -r . solohitech@ec2-44-201-192-126.compute-1.amazonaws.com:/justin
-
             # SSH into the remote server and perform deployment steps
-            ssh solohitech@ec2-44-201-192-126.compute-1.amazonaws.com "cd justin && npm install && npm run build && pm2 restart server.js"
+            cd justin
+            npm install
+            npm run build
+            pm2 restart server.js
 
           port: 22
           timeout: 50s
